Artist Fiddle & Z-index issue fix

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -275,6 +275,7 @@ header {
     -o-background-size: cover;
     position: relative;
     overflow: hidden;
+    z-index: 0;
 }
 
 #bg-video {
@@ -287,7 +288,7 @@ header {
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: -1000;
+  z-index: -1;
   overflow: hidden;
 }
 
